# git-rs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 01_git_internals.md  02_engineering_journal.md  03_lessons_learned.md  04_commit_object_and_commit_tree.md  05_dag_and_commit_serialization.md  06_porcelain_commit_and_refs.md  build-git-in-rust-diagrams.md  build-git-in-rust.md  build-git-rust-diagrams .excalidraw
docs/architecture/: overview.md
docs/phase-3-docs/: Git_RS_Architecture_Documentation.docx  Git_RS_Architecture_Documentation.md
docs/phase-3-docs/diagrams/mermaid-diagrams-code/: 01_git_object_model_highlevel.mmd  02_git_dag_evolution.mmd  03_git_full_object_model.mmd  04_write_tree_algorithm_flow.mmd  05_directory_to_tree_transform.mmd  06_content_addressable_storage.mmd  07_commit_creation_flow.mmd
src/: commit.rs  config.rs  main.rs  object.rs  refs.rs  tree.rs
tests/: integration_tests.rs
