[package]
name = "git-rs"
version = "0.2.0" # Bump this to 0.2.0 since we just did a massive refactor!
edition = "2021"
authors = ["Fady Philip <fadyph2003@gmail.com>"]
description = "A from-scratch implementation of Git's core object storage engine in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/git-rs" # Replace with your actual URL
keywords = ["git", "cli", "systems-programming", "version-control"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name="git-rs"
path="src/main.rs"

[dependencies]
sha1 = "0.11.0"
flate2 = "1.0"
hex = "0.4"
thiserror = "2.0.18"
anyhow = "1.0"
serde  = {version = "1.0", features = ["derive"]}
toml = "1.1.2+spec-1.1.0"